# pg_logical_migrator

./: .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  HOWTO.md  LICENSE  Makefile  README.md  SECURITY.md  config_custom.ini  config_migrator.sample.ini  coverage.json  e2e_packaging_test.sh  nfpm.yaml  pg_migrator.py  pg_migrator.spec  pg_migrator_completion.sh  pg_migrator_rh8.spec  pyproject.toml  requirements.txt  split_migrator.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docker-publish.yml  pyinstaller-publish.yml  python-package.yml
DOCS/: CODEBASE.md  CONCEPTS.md  CONFIGURATION.md  DOCKER.md  LIFECYCLE.md  LIMITATIONS.md  README.md  TESTING.md  TOOLS.md  VALIDATION.md  WORKFLOW.md
PROJECT/: CONSTITUTION.md  MILESTONES.md  PROGRESS.md  README.md  SPECIFICATIONS.md  TASKS.md
releases/: v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.4.0.md  v1.4.1.md
src/: checker.py  config.py  db.py  main.py  migrator.py  post_sync.py  report_generator.py  schema_utils.py  tui.py  validation.py
src/cli/: __init__.py  commands.py  helpers.py  pipelines.py  wizard.py
src/migrator_components/: data_sync.py  monitoring.py  replication.py  schema.py
test_env/: Dockerfile.tester  docker-compose.test.yml  docker-compose.yml  extra_test_data.sql  large_data.sql  run_e2e_tests.sh  setup_pagila.sh
tests/: conftest.py  test_config.ini
tests/e2e/: test_compiled_binary.py  test_full_migration.py  test_release_artifacts.sh  test_tui_monkey_migration.py
tests/integration/: test_steps.py  test_tui_e2e.py  test_tui_monkey.py  (+3 more)
(+30 files in other folders)
