[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pg_logical_migrator"
version = "1.4.0"
authors = [
  { name="Jean-Marie Renouard", email="jmrenouard@gmail.com" },
]
description = "PostgreSQL Logical Migration CLI Tool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
dependencies = [
    "psycopg[binary]>=3.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "configparser",
]

[project.urls]
"Homepage" = "https://github.com/jmrenouard/pg_logical_migrator"
"Bug Tracker" = "https://github.com/jmrenouard/pg_logical_migrator/issues"

[project.scripts]
pg_migrator = "src.main:main"

[tool.setuptools]
packages = ["src", "src.cli"]
